--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <div class="content">
   <h1>Justin-Home</h1>
   <p>Welcome!</p>
+  <p>Please Read <a href="./resources/assets/docs/The-Presidents-Advisory-1776-Commission-Final-Report.pdf">1776</a></p>
 </div>
 
 </body>
